force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/CRMWebClient__Interaction_Attribute__c.object-meta.xml
<CustomObject>
    <label>Interaction Attribute</label>
    <nameField>
        <label>Interaction Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>