force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/fields/CRMWebClient__Attribute__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Attribute__c</fullName>
    <label>Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>