force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/fields/CRMWebClient__Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Integration Events (Watchable)</fullName>
            </value>
            <value>
                <fullName>Integration Events (Settable)</fullName>
            </value>
            <value>
                <fullName>Integration Events (Watchable Handler Events)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>