force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/fields/CRMWebClient__Order__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>