force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/fields/CRMWebClient__Shown__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Shown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shown</label>
    <type>Checkbox</type>
</CustomField>