force-app/main/default/objects/CRMWebClient__Interaction_Attribute__c/listViews/CRMWebClient__Interaction_Attributes.listView-meta.xml
<ListView>
    <fullName>CRMWebClient__Interaction_Attributes</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CRMWebClient__Attribute__c</columns>
    <columns>CRMWebClient__Interaction_Type__c</columns>
    <columns>CRMWebClient__Order__c</columns>
    <columns>CRMWebClient__Shown__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Interaction Attributes</label>
</ListView>